--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
 *.class
 *.log
 
-# sbt specific
+# build specific
 dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-# Scala-IDE specific
-.scala_dependencies
