Add recent tweet display

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,7 @@
 play.crypto.secret = "easy to crack"
 
 play.i18n.langs = [ "en" ]
+play.ws.useragent = "SwanAudio v0.0.1"
+
+twitter.oauth.client = ""
+twitter.oauth.secret = ""
