Use env vars for config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,8 @@
 play.crypto.secret = "easy to crack"
+play.crypto.secret = ${?APP_CRYPTO_KEY}
 
 play.i18n.langs = [ "en" ]
 play.ws.useragent = "SwanAudio v0.0.1"
 
-twitter.oauth.client = ""
-twitter.oauth.secret = ""
+twitter.oauth.client = ${?TWITTER_OAUTH_CLIENT}
+twitter.oauth.secret = ${?TWITTER_OAUTH_SECRET}
