--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,8 @@
 play.crypto.secret = "easy to crack"
 play.crypto.secret = ${?APP_CRYPTO_KEY}
 
+play.http.filters = "filters.Filters"
+
 play.i18n.langs = [ "en" ]
 play.ws.useragent = "SwanAudio v0.0.1"
 
