Add CSP/Security headers, additional filters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,43 @@
-play.crypto.secret = "easy to crack"
-play.crypto.secret = ${?APP_CRYPTO_KEY}
+play.http.secret.key = "easy to crack"
+play.http.secret.key = ${?APP_CRYPTO_KEY}
 
-play.http.filters = "filters.Filters"
+play.modules {
+  enabled += "play.filters.cors.CORSModule"
+  enabled += "play.filters.headers.SecurityHeadersModule"
+  enabled += "play.filters.hosts.AllowedHostsModule"
+  enabled += "play.filters.gzip.GzipFilterModule"
+  enabled += "play.filters.https.RedirectHttpsModule"
+}
+
+defaultSrc  = "default-src 'self';"
+scriptSrc   = "script-src 'self' 'unsafe-eval' 'sha256-Ytsn3z+g2Ly5cW5Pp6fWpkSEXm7+mq0P/PwBux0KH9E=' www.google-analytics.com data:;"
+styleSrc    = "style-src 'self' fonts.googleapis.com 'unsafe-inline';"
+fontSrc     = "font-src 'self' fonts.gstatic.com;"
+imgSrc      = "img-src 'self' *.cdninstagram.com www.google-analytics.com;"
+
+play.filters {
+
+    enabled += "play.filters.headers.SecurityHeadersFilter"
+    enabled += "play.filters.headers.SecurityHeadersFilter"
+
+    headers {
+        frameOptions = "DENY"
+        xssProtection = "1; mode=block"
+        contentTypeOptions = "nosniff"
+        permittedCrossDomainPolicies = "master-only"
+        referrerPolicy = "origin-when-cross-origin, strict-origin-when-cross-origin"
+        contentSecurityPolicy = ${defaultSrc} ${scriptSrc} ${styleSrc} ${fontSrc} ${imgSrc}
+    }
+
+    hosts {
+        allowed = ["localhost", "swanaudio.com"]
+    }
+
+    https {
+        redirectEnabled = null # Enabled in prod mode only
+        strictTransportSecurity = "max-age=31536000; includeSubDomains; preload"
+    }
+}
 
 play.i18n.langs = [ "en" ]
 play.ws.useragent = "SwanAudio v0.0.1"
