--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,7 @@ imgSrc      = "img-src 'self' *.cdninstagram.com www.google-analytics.com;"
 play.filters {
 
     enabled += "play.filters.headers.SecurityHeadersFilter"
-    enabled += "play.filters.headers.SecurityHeadersFilter"
+    enabled += "play.filters.https.RedirectHttpsFilter"
 
     headers {
         frameOptions = "DENY"
