Use different docker-compose base image
The one that was being used did not support SBT 1.x, and was causing
development builds to fail.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3.5'
 services:
   swanaudio:
-    image: pitchplay/scala-dev:jdk8-web
+    image: swanaudio/scala-node
     command: '~run'
+    working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
       - /root/.ivy2
